Updated some BLM localization

--- a/localisation/AML_focus_l_english.yml
+++ b/localisation/AML_focus_l_english.yml
@@ -231,9 +231,9 @@
  BLM_found_the_new_hampstead_university:0 "New Hampstead University
  BLM_found_the_new_hampstead_university_desc:0 "In an effort to increase our prestige in the commonwealth we must found our own university and stop relying on sending our men to the home islands for a good education. It is time for our homegrown intellectuals."
  BLM_new_british_education:0 "New British Education"
- BLM_new_british_education:0 "To reflect this new intellectual society of British Lemuria we must reform our education system and put a further emphasis on being British and duty to the queen, country and god."
+ BLM_new_british_education_desc:0 "To reflect this new intellectual society of British Lemuria we must reform our education system and put a further emphasis on being British and duty to the queen, country and god."
  BLM_the_industrial_new_hampstead:0 "Industrial New Hampstead"
- BLM_the_industrial_new_hampstead:0 "New Hampstead lost a lot of its industry the last few years due to the great depression, we must try and unwind this by increasing it more then just a few factories in the rural areas."
+ BLM_the_industrial_new_hampstead_desc:0 "New Hampstead lost a lot of its industry the last few years due to the great depression, we must try and unwind this by increasing it more then just a few factories in the rural areas."
  BLM_fix_the_shipyards:0 "Fix the Shipyards!"
  BLM_fix_the_shipyards_desc:0 "We've been underperforming regarding our ship producing capacity and limited our trade due to poor shipyard conditions. We must fix this."
  BLM_the_roads:0 ""The roads the roads!""
@@ -242,8 +242,8 @@
  BLM_the_queens_lemuria_desc:0 "British Lemuria has always been an imperial territory of Britain, now we must reflect our status in the commonwealth through a memorial."
  BLM_attract_british_settlers:0 "Attract British Settlers"
  BLM_attract_british_settlers_desc:0 "We must attract more British settlers, in many areas we have next to no Brits besides government officials. We must improve this by giving British settlers economic benefits."
- BLM_abolish_anglish_socities:0 "Abolish Anglishism"
- BLM_abolish_anglish_socities_desc:0 "The Anglish National Movement is a Fascist organization which aims to kick the Loyalists out and replace the government with an Anglish one. The Anglish are a large group in British-Lemuria, heavily germanicized British settlers who speak an older dialect of English mixed with German and old Norse. A language which is affront to god."
+ BLM_abolish_anglish_societies:0 "Abolish Anglishism"
+ BLM_abolish_anglish_societies_desc:0 "The Anglish National Movement is a Fascist organization which aims to kick the Loyalists out and replace the government with an Anglish one. The Anglish are a large group in British-Lemuria, heavily germanicized British settlers who speak an older dialect of English mixed with German and old Norse. A language which is affront to god."
  BLM_the_british_man:0 ""The British Man...""
  BLM_the_british_man_desc:0 "Who is the British man? We must answer this question to make sure we know what kind of society we are."
  BLM_suppress_natives:0 "Promote Anglo-Saxonism"
@@ -260,3 +260,5 @@
  BLM_unrestmeeting_desc:0 "Due to increasing unrest over the continuation of the Anglo-Saxon reforms, we must go forth and try to quell the unrest before we must quell a rebellion."
  BLM_expand_the_ig:0 "Expand the I.G."
  BLM_expand_the_ig_desc:0 "The Imperial Garrison has become outdated, undermanned and ill managed. We must fix this by expanding it and modernizing it, it is time for British Lemurians to know stability again."
+ BLM_alliedrelations:0 "Allied relations"
+ BLM_alliedrelations_desc:0 "In an effort to secure our independence we must make sure we're a part of the Allied sphere."
