Local industry updated

--- a/localisation/AML_focus_l_english.yml
+++ b/localisation/AML_focus_l_english.yml
@@ -208,7 +208,7 @@
  BLM_our_people_desc:0 "not finished"
  BLM_our_lemuria:0 "Our Lemuria"
  BLM_our_lemuria_desc:0 "not finished"
- BLM_local_industry:0 "Local Industry"
+ BLM_local_industry:0 "New Local Industries"
  BLM_local_industry_desc:0 "In an effort to keep unrest in the new nation of British Lemuria low we must ensure the employment of the individual, by subsidizing factories and keeping a strong economic union between the nations of British-Lemuria."
  BLM_newmilitaryindustry:0 "New Military Industry"
  BLM_newmilitaryindustry_desc:0 "In an effort to arm this new nation we must construct new military industry to keep up with the Kumari."
