University now has a name

--- a/localisation/AML_focus_l_english.yml
+++ b/localisation/AML_focus_l_english.yml
@@ -228,7 +228,7 @@
  BLM_newlemuria_desc:0 "A New Lemuria, a better Lemuria, a stronger Lemuria. Those are some of the names for this new administration and we must show this."
  BLM_the_queens_industry:0 "The Royal Industry"
  BLM_the_queens_industry_desc:0 "In an effort to increase our industrial capacity and decrease the unrest we must open up new job opportunities, jobs for one and all."
- BLM_found_the_new_hampstead_university:0 "New Hampstead University
+ BLM_found_the_new_hampstead_university:0 "New Hampstead University"
  BLM_found_the_new_hampstead_university_desc:0 "In an effort to increase our prestige in the commonwealth we must found our own university and stop relying on sending our men to the home islands for a good education. It is time for our homegrown intellectuals."
  BLM_new_british_education:0 "New British Education"
  BLM_new_british_education_desc:0 "To reflect this new intellectual society of British Lemuria we must reform our education system and put a further emphasis on being British and duty to the queen, country and god."
