--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -117,5 +117,4 @@
  KLK_youth_desc:0 ""
  KLK_foreigners:0 ""
  KLK_foreigners_desc:0 ""
- KLK_military_main:0 ":DDDD HERE SDARDS DHE MILIDARY DREE XD XD XD"
- KLK_military_main_desc:0 ""
+ KLK_military_main:0 "Mil Tree"
