--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -90,7 +90,7 @@
  KLK_synd_center_left_2:0 "Social Welfare"
  KLK_synd_center_left_2_desc:0 ""
  KLK_synd_center_right_1:0 "The Pattaraikal"
- KLK_synd_center_right_1_desc:0 "Inspired by the 'Ateliers Nationaux' of the French Second Republic, the Pattaraikal, are non-specialized factories where menial tasks are done. Although they don't produce high quality equipment, they serve the social purpose of employing the young and jobless, and also double as a technical education center."
+ KLK_synd_center_right_1_desc:0 "Inspired by the 'Ateliers Nationaux' of the French Second Republic, the Pattaraikal are non-specialized factories where menial tasks are done. Although they don't produce high quality equipment, they serve the social purpose of employing the young and jobless, and also double as a technical education center."
  KLK_synd_center_right_2:0 "Improvised Arms Factories"
  KLK_synd_center_right_2_desc:0 ""
  KLK_synd_final:0 "The Red Kingdom"
@@ -107,14 +107,41 @@
  KLK_pop_2_desc:0 ""
  KLK_pop_3:0 "Free Education"
  KLK_pop_3_desc:0 ""
- KLK_final_left:0 ""
- KLK_final_left_desc:0 ""
- KLK_final_center:0 ""
+ KLK_final_center:0 "Army Reforms"
  KLK_final_center_desc:0 ""
- KLK_final_right:0 ""
- KLK_final_right_desc:0 ""
- KLK_youth:0 ""
+ KLK_youth:0 "Mobilize the Youth"
  KLK_youth_desc:0 ""
- KLK_foreigners:0 ""
+ KLK_foreigners:0 "Foreign Voluntary Forces"
  KLK_foreigners_desc:0 ""
- KLK_military_main:0 "Mil Tree"
+ KLK_military_main:0 "Preparing for War"
+ KLK_military_main_desc:0 ""
+ KLK_quality:0 "Professional Soldiers"
+ KLK_quality_desc:0 ""
+ KLK_quantity:0 "A Large Militia"
+ KLK_quantity_desc:0 ""
+ KLK_air:0 "Air Research"
+ KLK_air_desc:0 ""
+ KLK_quality_guns:0 "Weapon Modernization"
+ KLK_quality_guns_desc:0 ""
+ KLK_quality_motor:0 "Motorized Support"
+ KLK_quality_motor_desc:0 ""
+ KLK_quality_fighters:0 "Air Superiority"
+ KLK_quality_fighters_desc:0 ""
+ KLK_quality_armor:0 "Armored Warfare"
+ KLK_quality_armor_desc:0 ""
+ KLK_quality_CAS:0 "Attack Airplanes"
+ KLK_quality_CAS_desc:0 ""
+ KLK_quantity_guns:0 "Gun Imports"
+ KLK_quantity_guns_desc:0 ""
+ KLK_quantity_2:0 "Lower the Bar for Recruitment"
+ KLK_quantity_2_desc:0 ""
+ KLK_quantity_time:0 "Large Training Fields"
+ KLK_quantity_time_desc:0 ""
+ KLK_quantity_motor:0 "Repurpose Civilian Vehicles"
+ KLK_quantity_motor_desc:0 ""
+ KLK_quantity_cheap_ass_airplanes:0 "Purchase Foreign Airplanes"
+ KLK_quantity_cheap_ass_airplanes_desc:0 ""
+ KLK_military_final:0 "Navy Expansion Program"
+ KLK_military_final_desc:0 ""
+ KLK_military_final_2:0 "New Dockyards"
+ KLK_military_final_2_desc:0 ""
