--- a/localisation/ATL_l_english.yml
+++ b/localisation/ATL_l_english.yml
@@ -102,7 +102,7 @@
  ATL_axis_3:0 "Nationalize all the Banks"
  ATL_axis_3_desc:0 "The banks serve a purpose, and it's not to enrich the bankers. By lending money to the small producers with low interest, we can turn the banks from money making machines to a tool that will benefit the whole of Atlantis. This, of course, requires the UBG to become an organ of the state."
  ATL_open:0 "Open the Gates to the World"
- ATL_open_desc:0 "Our government understands that the in the free market the best always wins, and the best is, without doubt, Atlantis."
+ ATL_open_desc:0 "Our government understands that in the free market the best always wins, and the best is, without doubt, Atlantis."
  ATL_attack_sicilians:0 "Antagonize the Sicilian Mafia"
  ATL_attack_sicilians_desc:0 "The Sicilian Mafia worked as the main suppliers of goods for the Itorkanak. Even though they have been crucial to the Itorkanak rising as a powerful mafia, this has strained our relations with Italy, which has problems of their own with them, and has also cost them an unimaginable amount of money. It's time to end this partnership."
  ATL_attack_ringvereine:0 "Attack the Ringvereine"
@@ -200,13 +200,14 @@
  ATL_attack_all_tooltip:0 "§gWe are going to fight both criminal organizations \n§"
  ATL_naitastarak_tooltip:0 "§gAllows decisions to suppress dissident thought \n§"
  ATL_panatlantean_railroad:0 "§gAdd maximum infrastructure in all mainland states \n§"
- ATL_industrial_espionage:0 "§gAllows industrial espionage decisions \n§"
  ATL_air_reforms:0 "§gAllows decisions to remove the §yOutdated Air Force§  modifier \n§"
  ATL_forts:0 "§gAdds 3 forts and 3 coastal forts to every core urban province in Atlantis \n§"
  ATL_UK_trade:0 "§gAllows decisions to divert British resource production \n§"
  01_ATL_VLFP:0 "§gVastly increases the capacity of the carriers, at the cost of speed \n§"
  01_ATL_light_bombers:0 "§gIncreases the range and air defense of the CAS aircraft \n§"
  01_ATL_parasite:0 "§gSubstantially increases the air defense of strategic bombers, at the cost of some bombing capability \n§"
+ 
+ ATL_USA_espionage:0 "Expanded Spy Networks"
  ATL_kaprastiak_at_war:0 "War on the Kaprastiak"
  ATL_kaprastiak_at_war_2:0 "War on the Kaprastiak"
  ATL_kaprastiak_at_war_3:0 "War on the Kaprastiak"
