--- a/localisation/MKU_l_english.yml
+++ b/localisation/MKU_l_english.yml
@@ -10,4 +10,44 @@
  MKU_dig_ourselves_out:0 "Our Country, Our Solution"
  MKU_dig_ourselves_out_desc:0 "The world has now proven beyond a doubt that no one outside of Meru Kumari can be trusted to do anything for the good of our people."
  MKU_west_technical_aid:0 "Western Technical Aid"
- MKU_dig_ourselves_out_desc:0 "The world has now proven beyond a doubt that no one outside of Meru Kumari can be trusted to do anything for the good of our people."
+ MKU_west_technical_aid_desc:0 "The Western powers can provide us with the technical support that we will need to modernize our economy and military."
+ MKU_west_material_aid:0 "Western Material Aid"
+ MKU_west_material_aid_desc:0 "Perhaps we can request loans (at a favorable interest rate of course) which can help us to develop our nation more effectively."
+ MKU_west_humiliating_reforms:0 "Humiliating Reforms"
+ MKU_west_humiliating_reforms_desc:0 "Our people are displeased with the thought of changing some of our governmental and societal norms as requested by the Western powers."
+ MKU_west_upper_class_discontent:0 "Upper Class Discontent"
+ MKU_west_upper_class_discontent_desc:0 "The rich and powerful in our nation have determined that the Western reforms will take power and money away from them. They are not happy."
+ MKU_west_urban_discontent:0 "Urban Discontent"
+ MKU_west_urban_discontent_desc:0 "None of the people in our cities appear to appreciate the so called improvements that the Westerners are trying to make us enact. Something about these tenement houses just unnerves our people."
+ MKU_west_rural_discontent:0 "Rural Discontent"
+ MKU_west_rural_discontent_desc:0 "Sharecropping, co-operative farms, goods brokers, wholesalers... all of these foreign ideas are not sitting well with our rural populations. They have done things their way for the entire recorded history of our nation and they don't want to change now."
+ MKU_west_societal_reorganization:0 "Societal Reorganization"
+ MKU_west_societal_reorganization_desc:0 "With enough incentives even the most reluctant of our people can be convinced to fall in line behind these reforms. It may be a difficult and costly process, but in the end we will adapt and thrive!"
+ MKU_west_technical_breakthroughs_1:0 "Technical Breakthroughs"
+ MKU_west_technical_breakthroughs_1_desc:0 "Our research and trade agreements with the West are beginning to pay off! Our scientists believe that they will be able make tremendous strides forward in the near future."
+ MKU_west_technical_breakthroughs_2:0 "Technical Breakthroughs 2"
+ MKU_west_technical_breakthroughs_2_desc:0 "The startling advances our scientists have made are continuing steadily. We should continue down this path, it is bearing fruit well!"
+ MKU_west_technical_breakthroughs_3:0 "Technical Breakthroughs 3"
+ MKU_west_technical_breakthroughs_3_desc:0 "Our scientists have determined that with the West's help we have drastically accelerated our technological growth. They believe that they can keep this trend going for at least a little while longer."
+ MKU_west_industrial_breakthroughs_1:0 "Industrial Breakthroughs 1"
+ MKU_west_industrial_breakthroughs_1_desc:0 "The West's way of industrialization may seem strange to us at times, but it is difficult to argue with the results."
+ MKU_west_industrial_breakthroughs_2:0 "Industrial Breakthroughs 2"
+ MKU_west_industrial_breakthroughs_2_desc:0 "The factories have begun producing goods as well as predicted. With continued investment and innovation we can continue to industrialize our economy quickly and effectively."
+ MKU_west_industrial_breakthroughs_3:0 "Industrial Breakthroughs 3"
+ MKU_west_industrial_breakthroughs_3_desc:0 "Our industrial base is definitely more robust now after the technological and material advancements that the West has brought us. The economy, while doing very well, can still grow more and bring more prosperity to our nation."
+ MKU_west_military_breakthroughs_1:0 "Military Breakthroughs 1"
+ MKU_west_military_breakthroughs_1_desc:0 "While our generals and admirals have done an admirable job defending our nation thus far it has become obvious that the West's war-fighting capabilities are far beyond our own. We must modernize!"
+ MKU_west_nmilitary_breakthroughs_2:0 "Military Breakthroughs 2"
+ MKU_west_military_breakthroughs_2_desc:0 "By studying the West's military designs in depth we can improve our own. This is far cheaper and more effective than trying to make all of these innovations on our own."
+ MKU_west_military_breakthroughs_3:0 "Military Breakthroughs 3"
+ MKU_west_military_breakthroughs_3_desc:0 "Design after design, we're updating our military and making them more fit for modern combat. More work is required, but we've come so far!"
+ MKU_west_military_breakthroughs_4:0 "Military Breakthroughs 4"
+ MKU_west_military_breakthroughs_4_desc:0 "Even the Western advisors who have been helping us are astounded at the advances we've made for our military. We're certainly capable of defending ourselves now!"
+ MKU_strengthen_ties:0 "Strengthen Local Ties"
+ MKU_strengthen_ties_desc:0 "Our neighbors and brothers in Kumari will be able to help our nation in our time of desperate need."
+ MKU_military_ties_only:0 "Military Ties Only"
+ MKU_military_ties_only_desc:0 "Economic and cultural ties would only weaken us as a nation, making us more dependent on Kumari's stronger economy and possibly causing our unique culture to be subsumed into Kumari's larger one. We should limit our exposure to Kumari's control and only coordinate our military actions."
+ MKU_complete_allies:0 "Complete Allies"
+ MKU_complete_allies_desc:0 "Our long history of connections, both economic and cultural, with Kumari should be celebrated and strengthened. Our militaries should work together for our common defense."
+ MKU_cultural_ties_only:0 "Cultural Ties Only"
+ MKU_cultural_ties_only_desc:0 "By limiting our exposure to Kumari's economy, and by avoiding military entanglements, we can strengthen ourselves and improve our nation."
