--- a/localisation/AML_events_l_english.yml
+++ b/localisation/AML_events_l_english.yml
@@ -69,3 +69,7 @@
  geq.19.t:0 "Japan Declines!"
  geq.19.d:0 "Japan has declined our treaty."
  geq.19.a:0 "Geq will forever remain land locked."
+ sasr.t:0 "Second Anglo-Saxon Reforms"
+ sasr.d:0 "Ever since the last Anglo-Saxon reforms which were a disaster for all people in the colony there have sprung new more radical movements which both oppose and support new reforms. The reforms aimed to extinguish the Anglish culture and repress the many smaller minority ones in an effort to unify the colony, though it backfired horribly as in some areas it ended with small militias forming to protect their people and in other areas heavy protests. Now it's time for us to look at the bill to enact the second reforms, which have been announced by a unified coalition of High Tories and Imperialists. Will we risk even more unrest in an effort to unify further?"
+ sasr.a1:0 "Lemuria is English."
+ sasr.a2:0 "Resist the reforms."
