--- a/localisation/AML_focus_l_english.yml
+++ b/localisation/AML_focus_l_english.yml
@@ -262,3 +262,40 @@
  BLM_expand_the_ig_desc:0 "The Imperial Garrison has become outdated, undermanned and ill managed. We must fix this by expanding it and modernizing it, it is time for British Lemurians to know stability again."
  BLM_alliedrelations:0 "Allied relations"
  BLM_alliedrelations_desc:0 "In an effort to secure our independence we must make sure we're a part of the Allied sphere."
+ BLM_minority_rights:0 "Minority Act"
+ BLM_minority_rights_desc:0 "The Minority Act is an act which would guarantee the rights of and the protection of minority peoples and their cultures, letting them form their own schools and nurture their own cultures.
+ BLM_federate_assembly:0 "Democratic Assembly"
+ BLM_federate_assembly_desc:0 "We must ensure that we have a just and fair democracy, to see to that we must get every intellectual to help us. A new age in Lemuria requires a whole overhaul of its government."
+ BLM_go_through_educational_reforms:0 "Educational Reforms"
+ BLM_go_through_educational_reforms_desc:0 "An outdated system in which very few kids, usually onle those of noble lineage, get educated has been in place for all of Lemurias history, together we have to change that and educate our people. Not only for their own good but also for the collective good of all of Lemuria."
+ BLM_federal_lemuria:0 "Federal Lemuria!"
+ BLM_federal_lemuria_desc:0 "It's time for us to declare our new federation, a federation of Lemurian republics, a federation to unite Lemuria and to proclaim a new bastion of liberty and democracy."
+ BLM_liberty_beacon:0 "Liberty Beacon!"
+ BLM_liberty_beacon_desc:0 "As a monument to the new age we shall construct a beacon, one made from the finest materials with workers from all around Lemuria. A new monument for a new Lemuria."
+ BLM_greatest_monument:0 "Greatest Monument!"
+ BLM_greatest_monument_desc:0 "A great monument for a great nation, a monumement to our ancestors, our struggles, our achievements, our nation, and our devotion to the Commonwealth."
+ BLM_suspend_persecution_permanently:0 "Suspend Persecution"
+ BLM_suspend_persecution_permanently_desc:0 "To make way for an equal society we must make sure that we aren't putting down one group of people, all persecution must be suspended and the people uplifted and made equal."
+ BLM_new_titles:0 "New Titles"
+ BLM_new_titles_desc:0 "It is time we introduce new medals and titles to honour our troops who have so bravely fallen for British Lemuria."
+ BLM_arturan_problem:0 "Arturan Problem"
+ BLM_arturan_problem_desc:0 "Artura has become a rogue state with a rogue leader. We must decide on a course of action so the rogue colony will not start any troubles with the Kumari."
+ BLM_imperial_lemuria:0 "Imperial Lemuria!"
+ BLM_imperial_lemuria_desc:0 "Imperial Lemuria, a dominion so great. We've proven our worth and our ability to fend for ourselves, we've shown our diligence and allegiance to the crown. We're
+ BLM_new_navy:0 "A new Navy!"
+ BLM_new_navy_desc:0 "A new navy, a newer, stronger, better, faster navy."
+ BLM_new_submarines:0 "New Submarines"
+ BLM_new_submarines_desc:0 "Our few submarines are leftovers from Britain and outdated, we see that the future of naval warfare is under the tides. We must invest more in submarines if we want to keep our relevance."
+ BLM_new_destroyers:0 "New Destroyers"
+ BLM_new_destroyers_desc:0 "We must expand our naval capabilities, upgrade our destroyers to be the best of the best. Those trade routes wont defend themselves."
+ BLM_fund_shipyards:0 "Fund Shipyards"
+ BLM_fund_shipyards_desc:0 "Since we've decided on a naval doctrine, we must now also continue with that focus by investing into our naval production."
+ BLM_lemurian_airways:0 "Lemurian Airways"
+ BLM_lemurian_airways_desc:0 "A new government owned airway shall be set up to aid us in the development of our airforce."
+ BLM_lemurian_reconnaissance:0 "Lemurian Reconnaissance"
+ BLM_lemurian_reconnaissance_desc:0 "We've begun to establish grounds for a new modern airforce, we must also utilize the airforce to help our groundforces and to help the accuracy of our airforces."
+ BLM_lemurian_air_plan:0 "Lemurian Air plan"
+ BLM_lemurian_air_plan_desc:0 "Let us work with the Royal Airforce to establish the grounds for our own, plan it along the lines of the RAF."
+ BLM_BLAI:0 "BLAI"
+ BLM_BLAI_desc:0 "British-Lemurian Air International, our new and improved airways. We'll use this to help further develop our airforce."
+ 
