--- a/localisation/AML_ideas_l_english.yml
+++ b/localisation/AML_ideas_l_english.yml
@@ -44,3 +44,17 @@
  ATL_navy_capital_ship_3: "Pliskotan Miekzi"
  ATL_air_naval_strike_1: "Hierkon Mullam"
  ATL_navy_carrier_2: "Origunan Thiaskia"
+ nationalist_tensions: "Political Tensions"
+ nationalist_tensions_desc: "With political groups in Lemuria becoming more and more violent, seeking reforms from a government which refuses to change, the tensions have spread to every part of the country."
+ the_old_order: "Old Order"
+ the_old_order_desc: "An old class of Nobles which are from the first few settlements has managed to maintain control ever since colonization, the Nobles are often said to hold the tightest grip on society though that is often tested."
+ imperial_garrison: "Imperial Garrison"
+ imperial_garrison_desc: "The Imperial Garrison is the oldest barrier of defense in BL, they've served to protect the people since the early days of settlement and being a member of the I.G. is a big honour."
+ newbritisheducation: "New Education"
+ newbritisheducation_desc: "A new curriculum has been placed into the school system in place for the old and outdated one."
+ iac: "IAC"
+ iac_desc: "The Internal Affairs Committee was founded to try to fix problems pertaining to unrest and unstability in British Lemuria."
+ royalindustry: "Royal Industry"
+ royalindustry_desc: "A strong industry is vital to keep our economy going, our people working and to maintain stability."
+ the_imperial_order: "Imperial Order"
+ the_imperial_order_desc: "An old class of Nobles which are from the first few settlements has managed to maintain control ever since colonization, the Nobles are often said to hold the tightest grip on society though that is often tested."
