--- a/localisation/MKU_l_english.yml
+++ b/localisation/MKU_l_english.yml
@@ -95,7 +95,7 @@
  MKU_military_response_desc:0 "There has not been a completely unified response by any means to our national changes. Some generals have even threatened, obliquely, to rebel! We must encourage our armed forces to unify behind the nation, even if it requires some concessions just to keep the peace."
  MKU_glorious_communist_future:0 "Glorious Communist Future"
  MKU_glorious_communist_future_desc:0 "Marx and Lenin were men with the correct idea! We must unite with the common cause of the world's workers! Communism will bring peace and equality to our poor planet!"
- MKU_soviet_brethren:0 "Soviet Brethren"
+ MKU_soviet_brethren:0 "Soviet Pressure"
  MKU_soviet_brethren_desc:0 "Of all the world's leadership today, Iosef Stalin is correct in his application of Marxism-Leninism. Our Soviet brethren will help us to implement the true Workers' Paradise!"
  MKU_soviet_naval_bases:0 "Soviet Naval Bases"
  MKU_soviet_naval_bases_desc:0 "True to their promise of solidarity with the Workers of the World the Soviets have extended us an offer of help to build naval bases to help defend the rights of the working man!"
@@ -109,7 +109,7 @@
  MKU_placate_masses_desc:0 "A disturbing number of our people still cling to their wrong and dangerous ideas. We must figure out a way to keep them calm while we enact the necessary socialist reforms that will save our people!"
  MKU_industrial_revolution:0 "Industrial Revolution"
  MKU_industrial_revolution_desc:0 "Production, Production, Production! Our industrial capabilities are far below the levels required for a successful Workers' Revolution. We must increase our capacity immediately!"
- MKU_industrial_revolution_2:0 "Industrial Revolution"
+ MKU_industrial_revolution_2:0 "Industrial Revolution 2"
  MKU_industrial_revolution_2_desc:0 "Improvements have begun, but to truly take our place as one of the centers of the World Revolution we must continue to expand our industry!"
  MKU_soviet_technological_revolution:0 "Soviet Technological Revolution"
  MKU_soviet_technological_revolution_desc:0 "Our Soviet brethren have informed us that they have willing scientists that wish to help us with our technological progression. We must merely make transport and housing available for them, along with a nominal donation to the Soviet Union to help during their absence."
@@ -141,7 +141,7 @@
  MKU_meru_kumari_forever_desc:0 "As the true inheritors of the Kumari people we must reassert our control over our rightful lands!"
  MKU_demand_onipravelu:0 "Demand Onipravelu"
  MKU_demand_onipravelu_desc:0 "Onipravelu rightfully belongs to us... as does the rest of the pretender nation of Kumari. But we shall start by demanding back at least one province that belongs with us!"
- MKU_demand_hakarnisha:0 "Demand Onipravelu"
+ MKU_demand_hakarnisha:0 "Demand Hakarnisha"
  MKU_demand_hakarnisha_desc:0 "Hakarnisha is, by all recognized and correct historical records, a rightful possession of Meru Kumari. We must assure the return of our lands and resources."
  MKU_insult_neighbors:0 "Insult Neighbors"
  MKU_insult_neighbors_desc:0 "Our nation is superior to all around. We must declare our superiority in such a way that it is unmistakable!"
