lots of bug fixes and updates

--- a/localisation/replace/AML_strategic_region_names_l_english.yml
+++ b/localisation/replace/AML_strategic_region_names_l_english.yml
@@ -42,22 +42,22 @@
  STRATEGICREGION_41:1 "Northeastern Iberia"
  STRATEGICREGION_42:0 "Bay of Biscay"
  STRATEGICREGION_43:0 "Western Approaches"
- STRATEGICREGION_44:0 "Denmark Strait"
- STRATEGICREGION_45:0 "Norwegian Sea"
+ STRATEGICREGION_44:1 "Greenland Sea"
+ STRATEGICREGION_45:0 "Sea of Thule"
  STRATEGICREGION_46:0 "Barents Sea"
  STRATEGICREGION_47:1 "Iberian Coast"
  STRATEGICREGION_48:0 "African Coast"
- STRATEGICREGION_49:0 "North Atlantic Ridge"
+ STRATEGICREGION_49:0 "Frislandic Ridge"
  STRATEGICREGION_50:0 "Labrador Sea"
- STRATEGICREGION_51:0 "Mid Atlantic Gap"
+ STRATEGICREGION_51:0 "Eastern Atlantean Coast"
  STRATEGICREGION_52:0 "Gulf of Mexico"
  STRATEGICREGION_53:0 "Caribbean Sea"
  STRATEGICREGION_54:0 "Eastern Seaboard"
  STRATEGICREGION_55:0 "Newfoundland Sea"
- STRATEGICREGION_56:0 "Mid Atlantic"
+ STRATEGICREGION_56:1 "Western Atlantean Coast"
  STRATEGICREGION_57:0 "Sargasso Sea"
  STRATEGICREGION_58:0 "Central Atlantic Gap"
- STRATEGICREGION_59:0 "Demerara Plain"
+ STRATEGICREGION_59:0 "Antillian Approaches"
  STRATEGICREGION_60:0 "North Lemurian Ocean"
  STRATEGICREGION_61:0 "Cap Verde Plain"
  STRATEGICREGION_62:0 "Gulf Of Guinea"
@@ -83,7 +83,7 @@
  STRATEGICREGION_82:0 "Gulf of Carpentaria"
  STRATEGICREGION_83:0 "Solomon Sea"
  STRATEGICREGION_84:0 "Bismarck Sea"
- STRATEGICREGION_85:0 "South Lemurian Ocean"
+ STRATEGICREGION_85:1 "Southern Lemurian Ocean"
  STRATEGICREGION_86:0 "Tasman Sea"
  STRATEGICREGION_87:0 "Sea of Okhotsk"
  STRATEGICREGION_88:0 "Bering Sea"
@@ -94,8 +94,8 @@
  STRATEGICREGION_93:0 "Java Sea"
  STRATEGICREGION_94:0 "Mariana Region"
  STRATEGICREGION_95:1 "Sea of Mazu"
- STRATEGICREGION_96:0 "North Emperor Chain"
- STRATEGICREGION_97:0 "Eastern Micronesia"
+ STRATEGICREGION_96:1 "Western Pacific"
+ STRATEGICREGION_97:1 "Northern Kanaganesia"
  STRATEGICREGION_98:0 "Great Australian Bight"
  STRATEGICREGION_99:0 "Byers Sea"
  STRATEGICREGION_100:0 "Red Sea"
@@ -105,8 +105,8 @@
  STRATEGICREGION_104:0 "Arabian Sea"
  STRATEGICREGION_105:1 "Hawaii Ridge"
  STRATEGICREGION_106:0 "Mexican Coast"
- STRATEGICREGION_107:0 "Western Canal Zone"
- STRATEGICREGION_108:0 "South American coast"
+ STRATEGICREGION_107:1 "Central American West Coast"
+ STRATEGICREGION_108:0 "Chilean Coast"
  STRATEGICREGION_109:0 "Peruvian Coast"
  STRATEGICREGION_110:0 "East Pacific Rise"
  STRATEGICREGION_111:1 "Central East Pacific"
@@ -175,10 +175,10 @@
  STRATEGICREGION_174:0 "Norwegian Coast"
  STRATEGICREGION_175:1 "Northern Mu Coast"
  STRATEGICREGION_176:0 "Central North Pacific"
- STRATEGICREGION_177:0 "Western North Pacific"
- STRATEGICREGION_178:0 "West Polynesia"
- STRATEGICREGION_179:1 "Polynesian Coast"
- STRATEGICREGION_180:1 "Sea of Maui"
+ STRATEGICREGION_177:1 "Far Western Pacific"
+ STRATEGICREGION_178:0 "Southern Kanaganesia"
+ STRATEGICREGION_179:1 "Tahitian Coast"
+ STRATEGICREGION_180:0 "Sea of Maui"
  STRATEGICREGION_181:0 "Madagascar"
  STRATEGICREGION_182:0 "North West Africa"
  STRATEGICREGION_183:0 "Central Africa"
@@ -191,7 +191,7 @@
  STRATEGICREGION_190:1 "Pakistan"
  STRATEGICREGION_191:0 "Northern Norway"
  STRATEGICREGION_192:0 "Northern Sweden"
- STRATEGICREGION_193:2 "Northern Australia"
+ STRATEGICREGION_193:1 "Northern Australia"
  STRATEGICREGION_194:0 "Eastern Australia"
  STRATEGICREGION_195:0 "Central Australia"
  STRATEGICREGION_196:1 "Arabia"
@@ -209,7 +209,7 @@
  STRATEGICREGION_208:0 "Western France"
  STRATEGICREGION_209:0 "Northwestern Iberia"
  STRATEGICREGION_210:0 "Southern Iberia"
- STRATEGICREGION_211:0 "Fa'efana Plains"
+ STRATEGICREGION_211:0 "Vahevane Plains"
  STRATEGICREGION_212:0 "Silver Coast"
  STRATEGICREGION_213:0 "Baragá"
  STRATEGICREGION_214:0 "Kanahe"
@@ -243,8 +243,13 @@
  STRATEGICREGION_242:0 "Californian Sea"
  STRATEGICREGION_243:0 "California Island"
  STRATEGICREGION_244:0 "Cascadia"
- STRATEGICREGION_245:0 "Atlantis"
- STRATEGICREGION_246:1 "Lemuria"
+ STRATEGICREGION_245:0 "The Kolpo"
+ STRATEGICREGION_246:1 "Kumari"
  STRATEGICREGION_247:1 "Great Mu Desert"
  STRATEGICREGION_248:1 "Manu Peninsula"
- STRATEGICREGION_249:2 "Goprug Mountains"
+ STRATEGICREGION_249:0 "Goprug Mountains"
+ STRATEGICREGION_250:0 "Ackerson Desert"
+ STRATEGICREGION_251:0 "Southern Lemurian Plain"
+ STRATEGICREGION_252:0 "Afro-Lemuria"
+ STRATEGICREGION_253:0 "Pantiya"
+ STRATEGICREGION_254:0 "Marekatan Peninsula"
