Kalari Kingdom stuff
XDDDDDDDDDDDDDDDDDD

--- a/localisation/KLK_l_english.yml
+++ b/localisation/KLK_l_english.yml
@@ -29,7 +29,7 @@
  KLK_olig_center_2_desc:0 ""
  KLK_olig_mil_2:0 "Police Crackdowns"
  KLK_olig_mil_2_desc:0 ""
- KLK_olig_cult_2:0 "Import Foreign Media"
+ KLK_olig_cult_2:0 "Import American Media"
  KLK_olig_cult_2_desc:0 ""
  KLK_olig_mil_left:0 "American Arms Companies"
  KLK_olig_mil_left_desc:0 ""
@@ -165,6 +165,10 @@
  KLK_media_licensing:0 "Foreign Media Licenses"
  KLK_liberals:0 "Liberals in the Government"
  KLK_crackdowns:0 "Militarized Police"
+ KLK_american_media:0 "American Media"
+ KLK_privatized_lands:0 "Anger over Privatization"
+ KLK_holidays:0 "Consumerist Holidays"
+ KLK_deep_state:0 "The Deep State"
  
  ####### tooltips
  01_KLK_mercenary:0 "§gAllows the hiring of mercenary forces \n§"
@@ -173,6 +177,7 @@
  ####### decisions
  KLK_hiring:0 "Currently Hiring Mercenaries"
  KLK_mercenary_flag:0 "Mercenaries Available"
+ KLK_deep_state_flag:0 "Deep State"
  KLK_anti_mandalist_decisions:0 "Anti-Mandalist Campaign"
  KLK_anti_mandalism_flag:0 "Anti-Mandalist Operations"
  KLK_attack_mandalists:0 "Persecute Mandalists"
@@ -180,3 +185,4 @@
  KLK_mercenary_decisions:0 "Mercenaries for Hire"
  KLK_hire_infantry:0 "Hire an Infantry Division"
  KLK_hire_mech:0 "Hire a Mechanized Division"
+ KLK_regain_land:0 "Regain the Mandalist Territory"
