--- a/localisation/replace/AML_countries_l_english.yml
+++ b/localisation/replace/AML_countries_l_english.yml
@@ -75,8 +75,8 @@
  UTU_fascism_DEF:0 "Greater Utura"
  UTU_democratic:0 "Utura"
  UTU_democratic_DEF:0 "Utura"
- UTU_neutrality:0 "Uturan Kingdom"
- UTU_neutrality_DEF:0 "the Uturan Kingdom"
+ UTU_neutrality:0 "Uturan Princedom"
+ UTU_neutrality_DEF:0 "the Uturan Princedom"
  UTU_communism:0 "Uturan Union"
  UTU_communism_DEF:0 "the Uturan Union"
  UTU_fascism_ADJ:0 "Uturan"
